--- a/google_translate/pubspec.yaml
+++ b/google_translate/pubspec.yaml
@@ -39,6 +39,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - images/welcom.png
+    - images/head.png
+    - images/ic_select_country.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
